==> ExplorerBear/SimpleOSC-SG/Drivers/UserDriver/Src/OLED.c <==
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_WriteCommand(uint8_t Command)
{
	uint8_t Sendbyte[2]= {0x00,};
	Sendbyte[1] = Command;
	HAL_I2C_Master_Transmit(&IIC,IIC_Addr,Sendbyte,2,200);
	//HAL_I2C_Master_Transmit_DMA(&IIC,IIC_Addr,Sendbyte,2);
}

void OLED_WriteData(uint8_t *Data, uint8_t Count)
{
	uint8_t *Sendbyte;
	Sendbyte = (uint8_t *)malloc((Count+1)*sizeof(uint8_t));
	SendByte_Addr = Sendbyte;
	*Sendbyte=0x40;
	for(uint8_t i=0;i<Count;i++)
	{
		*(Sendbyte+1+i) = *(Data+i);
	}
	
	#ifdef IIC_Mode_Blocking
	HAL_I2C_Master_Transmit(&IIC,IIC_Addr,Sendbyte,Count+1,200);
	free(Sendbyte);
	#endif
	
	#ifdef IIC_Mode_IT
	HAL_I2C_Master_Transmit_IT(&IIC,IIC_Addr,Sendbyte,Count+1);
	#endif
	
	#ifdef IIC_Mode_DMA
	HAL_I2C_Master_Transmit_DMA(&IIC,IIC_Addr,Sendbyte,Count+1);
	#endif
	
}

void OLED_Update(void)
{
	#ifndef IIC_Mode_Blocking 
	if(((OLED_state>>7)&0x01) == 1)//用于判断对屏幕的刷新是否完成
	{
		PageNum = PageNum | (0x1<<7);//设置自动重刷新标志位
		return;
	} 
		
	OLED_state |= (0x1<<7);//设置刷新状态标志位
	OLED_Width = 128;
	
	PageNum = 0x07;
	OLED_state = (OLED_state&0x80)| 0x00;
	OLED_Transmit_Datas();
	#endif
	#ifdef IIC_Mode_Blocking
	uint8_t j;
	/*遍历每一页*/
	for (j = 0; j < 8; j ++)
	{
		/*设置光标位置为每一页的第一列*/
		OLED_SetCursor(j, 0);
		/*连续写入128个数据，将显存数组的数据写入到OLED硬件*/
		OLED_WriteData((OLED_DisplayBuf+(j*128)), 128);
	}
	#endif
	
}

void OLED_UpdateArea(int16_t X, int16_t Y, uint8_t Width, uint8_t Height)
{
	#ifndef IIC_Mode_Blocking
	if(((OLED_state>>7)&0x01) == 1)
	{
		PageNum = PageNum | (0x1<<7);
		return;
	}
	OLED_state |= (0x1<<7);
	uint8_t W_Data,PgEn;
	#endif
	
	int16_t Page, Page1;
	/*负数坐标在计算页地址时需要加一个偏移*/
	/*(Y + Height - 1) / 8 + 1的目的是(Y + Height) / 8并向上取整*/
	Page = Y / 8;
	Page1 = (Y + Height - 1) / 8 + 1;
	if (Y < 0)
	{
		Page -= 1;
		Page1 -= 1;
	}
	
	#ifndef IIC_Mode_Blocking
	if(127-X > Width) W_Data=Width; 
	else W_Data = 127-X;
	if(Page1 >7) PgEn=7;
	else PgEn=Page1;//判断是否超出屏幕，超出不显示
	
	PageNum=(Page<<4)|PgEn;
	OLED_state = (OLED_state&0x80)| X;
	OLED_Width = W_Data;

	OLED_Transmit_Datas();
	#endif
	
	#ifdef IIC_Mode_Blocking
	int16_t j;
	/*遍历指定区域涉及的相关页*/
	for (j = Page; j < Page1; j ++)
	{
		if (X >= 0 && X <= 127 && j >= 0 && j <= 7)		//超出屏幕的内容不显示
		{
			/*设置光标位置为相关页的指定列*/
			OLED_SetCursor(j, X);
			/*连续写入Width个数据，将显存数组的数据写入到OLED硬件*/
			OLED_WriteData((OLED_DisplayBuf+(j*128)+X), Width);
		}
	} 
	#endif

}
